Code Notificaiton API and add API for SwaggerUI
